Finished the Navigation bar
Created a Navigation component. Added the profile picture, name, stats icon, and logout button to the navigation bar component. Added component to layout.js so it shows on top of every page.

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,20 @@
 
 @layer base {
   body {
-    @apply text-white bg-slate-900
+    @apply text-white bg-slate-900;
+  }
+
+  button {
+    @apply hover:scale-110 transition-all duration-100;
+  }
+}
+
+@layer utilities {
+  .btn {
+    @apply px-4 py-2 text-sm capitalize rounded-xl;
+  }
+
+  .btn-danger {
+    @apply bg-red-600 border-red-600 text-white;
   }
 }
