--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,15 @@
     @apply px-4 py-2 text-sm capitalize rounded-xl;
   }
 
+  .btn-primary {
+    @apply border bg-slate-700 border-slate-700 text-lime-400
+  }
+
+  .btn-primary-outline {
+    @apply border border-lime-400 text-lime-400
+  }
+
   .btn-danger {
-    @apply bg-red-600 border-red-600 text-white;
+    @apply border bg-red-600 border-red-600 text-white;
   }
 }
