--- a/app/globals.css
+++ b/app/globals.css
@@ -10,11 +10,15 @@
   button {
     @apply hover:scale-110 transition-all duration-100;
   }
+
+  input {
+    @apply px-4 py-2 bg-slate-600 rounded-xl
+  }
 }
 
 @layer utilities {
   .btn {
-    @apply px-4 py-2 text-sm capitalize rounded-xl;
+    @apply self-start px-4 py-2 text-sm capitalize rounded-xl;
   }
 
   .btn-primary {
@@ -27,5 +31,9 @@
 
   .btn-danger {
     @apply border bg-red-600 border-red-600 text-white;
+  }
+
+  .input-group {
+    @apply flex flex-col gap-4
   }
 }
