--- a/app/globals.css
+++ b/app/globals.css
@@ -3,37 +3,40 @@
 @tailwind utilities;
 
 @layer base {
-  body {
-    @apply text-white bg-slate-900 relative;
-  }
+	html {
+		scroll-behavior: smooth;
+	}
+	body {
+		@apply text-white bg-slate-900 relative;
+	}
 
-  button {
-    @apply hover:scale-110 transition-all duration-100;
-  }
+	button {
+		@apply hover:scale-110 transition-all duration-100;
+	}
 
-  input {
-    @apply px-4 py-2 bg-slate-600 rounded-xl
-  }
+	input {
+		@apply px-4 py-2 bg-slate-600 rounded-xl;
+	}
 }
 
 @layer utilities {
-  .btn {
-    @apply self-start px-4 py-2 text-sm capitalize rounded-xl;
-  }
+	.btn {
+		@apply self-start px-4 py-2 text-sm capitalize rounded-xl;
+	}
 
-  .btn-primary {
-    @apply border bg-slate-700 border-slate-700 text-lime-400;
-  }
+	.btn-primary {
+		@apply border bg-slate-700 border-slate-700 text-lime-400;
+	}
 
-  .btn-primary-outline {
-    @apply border border-lime-400 text-lime-400;
-  }
+	.btn-primary-outline {
+		@apply border border-lime-400 text-lime-400;
+	}
 
-  .btn-danger {
-    @apply border bg-red-600 border-red-600 text-white;
-  }
+	.btn-danger {
+		@apply border bg-red-600 border-red-600 text-white;
+	}
 
-  .input-group {
-    @apply flex flex-col gap-4
-  }
+	.input-group {
+		@apply flex flex-col gap-4;
+	}
 }
